--- a/search/index.html
+++ b/search/index.html
@@ -9,14 +9,14 @@
 <meta name="keywords" content="">
 <meta name="description" content="🔍搜索 - Sulv&#39;s Blog">
 <meta name="author" content="Sulv">
-<link rel="canonical" href="https://DTTSY.github.io/search/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.css" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
-<script defer crossorigin="anonymous" src="/assets/js/search.js"></script>
-<link rel="icon" href="https://DTTSY.github.io/img/Q.gif">
-<link rel="icon" type="image/png" sizes="16x16" href="https://DTTSY.github.io/img/Q.gif">
-<link rel="icon" type="image/png" sizes="32x32" href="https://DTTSY.github.io/img/Q.gif">
-<link rel="apple-touch-icon" href="https://DTTSY.github.io/img/Q.gif">
-<link rel="mask-icon" href="https://DTTSY.github.io/img/Q.gif">
+<link rel="canonical" href="https://dttsy.github.io/hugoBlog/search/">
+<link crossorigin="anonymous" href="/hugoBlog/assets/css/stylesheet.css" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
+<script defer crossorigin="anonymous" src="/hugoBlog/assets/js/search.js"></script>
+<link rel="icon" href="https://dttsy.github.io/hugoBlog/img/Q.gif">
+<link rel="icon" type="image/png" sizes="16x16" href="https://dttsy.github.io/hugoBlog/img/Q.gif">
+<link rel="icon" type="image/png" sizes="32x32" href="https://dttsy.github.io/hugoBlog/img/Q.gif">
+<link rel="apple-touch-icon" href="https://dttsy.github.io/hugoBlog/img/Q.gif">
+<link rel="mask-icon" href="https://dttsy.github.io/hugoBlog/img/Q.gif">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <noscript>
@@ -74,7 +74,7 @@ var _hmt = _hmt || [];
 <meta property="og:title" content="🔍搜索" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://DTTSY.github.io/search/" /><meta property="article:section" content="" />
+<meta property="og:url" content="https://dttsy.github.io/hugoBlog/search/" /><meta property="article:section" content="" />
 
 
 
@@ -92,7 +92,7 @@ var _hmt = _hmt || [];
       "@type": "ListItem",
       "position":  1 ,
       "name": "🔍搜索",
-      "item": "https://DTTSY.github.io/search/"
+      "item": "https://dttsy.github.io/hugoBlog/search/"
     }
   ]
 }
@@ -118,14 +118,14 @@ var _hmt = _hmt || [];
   },
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "https://DTTSY.github.io/search/"
+    "@id": "https://dttsy.github.io/hugoBlog/search/"
   },
   "publisher": {
     "@type": "Organization",
     "name": "Sulv's Blog",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://DTTSY.github.io/img/Q.gif"
+      "url": "https://dttsy.github.io/hugoBlog/img/Q.gif"
     }
   }
 }
@@ -160,8 +160,8 @@ var _hmt = _hmt || [];
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://DTTSY.github.io/" accesskey="h" title="Sulv&#39;s Blog (Alt + H)">
-            <img src="https://DTTSY.github.io/img/Q.gif" alt="logo" aria-label="logo"
+            <a href="https://dttsy.github.io/hugoBlog/" accesskey="h" title="Sulv&#39;s Blog (Alt + H)">
+            <img src="https://dttsy.github.io/hugoBlog/img/Q.gif" alt="logo" aria-label="logo"
                  height="35">Sulv&#39;s Blog</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
@@ -188,37 +188,37 @@ var _hmt = _hmt || [];
         </div>
         <ul id="menu">
             <li>
-                <a href="https://DTTSY.github.io/search" title="🔍 搜索 (Alt &#43; /)" accesskey=/>
+                <a href="https://dttsy.github.io/hugoBlog/search" title="🔍 搜索 (Alt &#43; /)" accesskey=/>
                 <span class="active">🔍 搜索</span>
                 </a>
             </li>
             <li>
-                <a href="https://DTTSY.github.io/" title="🏠 主页">
+                <a href="https://dttsy.github.io/hugoBlog/" title="🏠 主页">
                 <span>🏠 主页</span>
                 </a>
             </li>
             <li>
-                <a href="https://DTTSY.github.io/posts" title="📚 文章">
+                <a href="https://dttsy.github.io/hugoBlog/posts" title="📚 文章">
                 <span>📚 文章</span>
                 </a>
             </li>
             <li>
-                <a href="https://DTTSY.github.io/tags" title="🧩 标签">
+                <a href="https://dttsy.github.io/hugoBlog/tags" title="🧩 标签">
                 <span>🧩 标签</span>
                 </a>
             </li>
             <li>
-                <a href="https://DTTSY.github.io/archives/" title="⏱️ 时间轴">
+                <a href="https://dttsy.github.io/hugoBlog/archives/" title="⏱️ 时间轴">
                 <span>⏱️ 时间轴</span>
                 </a>
             </li>
             <li>
-                <a href="https://DTTSY.github.io/about" title="🙋🏻‍♂️ 关于">
+                <a href="https://dttsy.github.io/hugoBlog/about" title="🙋🏻‍♂️ 关于">
                 <span>🙋🏻‍♂️ 关于</span>
                 </a>
             </li>
             <li>
-                <a href="https://DTTSY.github.io/links" title="🤝 友链">
+                <a href="https://dttsy.github.io/hugoBlog/links" title="🤝 友链">
                 <span>🤝 友链</span>
                 </a>
             </li>
@@ -244,7 +244,7 @@ var _hmt = _hmt || [];
         Copyright
         &copy;
         2020-2023
-        <a href="https://DTTSY.github.io/" style="color:#939393;">Sulv&#39;s Blog</a>
+        <a href="https://dttsy.github.io/hugoBlog/" style="color:#939393;">Sulv&#39;s Blog</a>
         All Rights Reserved
     </span>
     <a href="https://beian.miit.gov.cn/" target="_blank" style="color:#939393;">填写自己的备案号</a>&nbsp;
