--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="Sulv">
-<link rel="canonical" href="https://dttsy.github.io/hugoBlog/404.html">
-<link crossorigin="anonymous" href="/hugoBlog/assets/css/stylesheet.css" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://dttsy.github.io/hugoBlog/img/Q.gif">
-<link rel="icon" type="image/png" sizes="16x16" href="https://dttsy.github.io/hugoBlog/img/Q.gif">
-<link rel="icon" type="image/png" sizes="32x32" href="https://dttsy.github.io/hugoBlog/img/Q.gif">
-<link rel="apple-touch-icon" href="https://dttsy.github.io/hugoBlog/img/Q.gif">
-<link rel="mask-icon" href="https://dttsy.github.io/hugoBlog/img/Q.gif">
+<link rel="canonical" href="http://dttsy.eu.org/404.html">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.css" rel="preload stylesheet" as="style">
+<link rel="icon" href="http://dttsy.eu.org/img/Q.gif">
+<link rel="icon" type="image/png" sizes="16x16" href="http://dttsy.eu.org/img/Q.gif">
+<link rel="icon" type="image/png" sizes="32x32" href="http://dttsy.eu.org/img/Q.gif">
+<link rel="apple-touch-icon" href="http://dttsy.eu.org/img/Q.gif">
+<link rel="mask-icon" href="http://dttsy.eu.org/img/Q.gif">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <noscript>
@@ -73,7 +73,7 @@ var _hmt = _hmt || [];
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://dttsy.github.io/hugoBlog/404.html" />
+<meta property="og:url" content="http://dttsy.eu.org/404.html" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
@@ -109,8 +109,8 @@ var _hmt = _hmt || [];
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://dttsy.github.io/hugoBlog/" accesskey="h" title="Sulv&#39;s Blog (Alt + H)">
-            <img src="https://dttsy.github.io/hugoBlog/img/Q.gif" alt="logo" aria-label="logo"
+            <a href="http://dttsy.eu.org/" accesskey="h" title="Sulv&#39;s Blog (Alt + H)">
+            <img src="http://dttsy.eu.org/img/Q.gif" alt="logo" aria-label="logo"
                  height="35">Sulv&#39;s Blog</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
@@ -137,37 +137,37 @@ var _hmt = _hmt || [];
         </div>
         <ul id="menu">
             <li>
-                <a href="https://dttsy.github.io/hugoBlog/search" title="🔍 搜索 (Alt &#43; /)" accesskey=/>
+                <a href="http://dttsy.eu.org/search" title="🔍 搜索 (Alt &#43; /)" accesskey=/>
                 <span>🔍 搜索</span>
                 </a>
             </li>
             <li>
-                <a href="https://dttsy.github.io/hugoBlog/" title="🏠 主页">
+                <a href="http://dttsy.eu.org/" title="🏠 主页">
                 <span class="active">🏠 主页</span>
                 </a>
             </li>
             <li>
-                <a href="https://dttsy.github.io/hugoBlog/posts" title="📚 文章">
+                <a href="http://dttsy.eu.org/posts" title="📚 文章">
                 <span>📚 文章</span>
                 </a>
             </li>
             <li>
-                <a href="https://dttsy.github.io/hugoBlog/tags" title="🧩 标签">
+                <a href="http://dttsy.eu.org/tags" title="🧩 标签">
                 <span>🧩 标签</span>
                 </a>
             </li>
             <li>
-                <a href="https://dttsy.github.io/hugoBlog/archives/" title="⏱️ 时间轴">
+                <a href="http://dttsy.eu.org/archives/" title="⏱️ 时间轴">
                 <span>⏱️ 时间轴</span>
                 </a>
             </li>
             <li>
-                <a href="https://dttsy.github.io/hugoBlog/about" title="🙋🏻‍♂️ 关于">
+                <a href="http://dttsy.eu.org/about" title="🙋🏻‍♂️ 关于">
                 <span>🙋🏻‍♂️ 关于</span>
                 </a>
             </li>
             <li>
-                <a href="https://dttsy.github.io/hugoBlog/links" title="🤝 友链">
+                <a href="http://dttsy.eu.org/links" title="🤝 友链">
                 <span>🤝 友链</span>
                 </a>
             </li>
@@ -183,7 +183,7 @@ var _hmt = _hmt || [];
         Copyright
         &copy;
         2020-2023
-        <a href="https://dttsy.github.io/hugoBlog/" style="color:#939393;">Sulv&#39;s Blog</a>
+        <a href="http://dttsy.eu.org/" style="color:#939393;">Sulv&#39;s Blog</a>
         All Rights Reserved
     </span>
     <a href="https://beian.miit.gov.cn/" target="_blank" style="color:#939393;">填写自己的备案号</a>&nbsp;
